--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </ol>
   <hr size="2"noshade>
   <h3>Contact me</h3>
-  <p><a href="Contacts.html">Click here</a></p>
+  <p><a href="contacts.html">Click here</a></p>
   <br>
   <br>
 </body>
