--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <tr>
       <td><img src="profile-pic.jpg" alt="Anton-antonov-profile-picture"></td>
       <td><h1>Anton Antonov</h1>
-      <p><em>Founder of <strong>Antonov Finance</strong></em></p>
-      <p>I am a beginner in web Development.</p></td>
+      <p><em>Founder of <strong>Antonov.Finance</strong></em></p>
+    <ul>
+      <li>A Beginner in Web Development</li>
+      <li>Previous experience in Sales & Business Development</li>
+      <li>Interested in Economy & Finance</li>
+      <li>Passionate about Self Improvement</li>
+    </ul>
+      </td>
     </tr>
   </table>
   <hr size="2"noshade>
@@ -29,26 +35,28 @@
       <tr>
         <td>Web Development</td>
         <td>⭐</td>
-        <td>Proejct Managment</td>
-        <td>⭐⭐⭐⭐⭐</td>
+        <td>Project Managment</td>
+        <td>⭐⭐⭐⭐</td>
       </tr>
     </table>
   </tr>
   </table>  <hr>
   <h3>Education</h3>
   <ul>
-    <li>Augsburg Univercity</li>
-    <li>UNWE</li>
+    <li>Economy & Finance at:</li>
+    <li>Univercity of World and National Economics, Sofia</li>
   </ul><hr>
   <h3>Hobbies</h3>
   <ol>
-    <li>Outdoor</li>
+    <li>Outdoor activities</li>
     <li>Coffee</li>
     <li>Gardening</li>
+    <li>Photography, art & music</li>
+    <p>You can check my Instagram <a href="https://www.instagram.com/anton0v.art/"> @anton0v.art</a></p>
   </ol>
   <hr size="2"noshade>
   <h3>Contact me</h3>
-  <p><a href="contacts.html">Click here</a></p>
+  <p><a href="Contacts.html">Click here</a></p>
   <br>
   <br>
 </body>
